fullSandbox11072023/force-app/main/default/objects/Sample_Product__c/Sample_Product__c.object-meta.xml
<CustomObject>
    <label>Sample Product</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Sample Product Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sample Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>