fullSandbox11072023/force-app/main/default/objects/Sample_Product__c/fields/Sample_Request__c.field-meta.xml
<CustomField>
    <fullName>Sample_Request__c</fullName>
    <label>Sample Request</label>
    <referenceTo>Sample_Request_OLD__c</referenceTo>
    <relationshipLabel>Sample Products</relationshipLabel>
    <relationshipName>Sample_Products</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>