fullSandbox11072023/force-app/main/default/objects/Sample_Product__c/fields/UOM__c.field-meta.xml
<CustomField>
    <fullName>UOM__c</fullName>
    <label>UOM</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>EA</fullName>
                <default>true</default>
                <label>EA</label>
            </value>
            <value>
                <fullName>CS</fullName>
            </value>
            <value>
                <fullName>BX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>